--- a/javascript/web/2.html
+++ b/javascript/web/2.html
@@ -2,9 +2,14 @@
 <html>
     <title>WEB1 - CSS</title>
     <meta charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="colors.js"></script>
 </html>
 <body>
 <h1><a href="index.html">WEB</a></h1>
+<input  type="BUTTON" value="night" onclick="
+            nightDayHandler(this);
+">
 <ol>
     <li><a href='1.html'>HTML</a></li>
     <li><a href='2.html'>CSS</a></li> 
